<resources>
    <string name="app_name">SQLiteApp</string>
    <string name="text_title">Please enter the details below</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="insert_data">Insert data</string>
    <string name="update_data">Update data</string>
    <string name="view_data">View data</string>
    <string name="delete_data">Delete data</string>
</resources>