<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_title"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:hint="@string/contact"
        android:inputType="number"
        android:textSize="24sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:textSize="24sp"
        android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob"
        android:layout_marginTop="30dp"
        android:text="@string/insert_data"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnInsert"
        android:layout_marginTop="20dp"
        android:text="@string/update_data"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUpdate"
        android:layout_marginTop="20dp"
        android:text="@string/delete_data"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDelete"
        android:layout_marginTop="8dp"
        android:text="@string/view_data"
        android:textAllCaps="false"
        android:textSize="24sp" />
</RelativeLayout>